# belka-drug-binding-prediction

./: LICENSE  README.md  pyproject.toml  requirements.txt
belka/: __init__.py  data.py  ema.py  ensemble.py  layers.py  losses.py  models.py  proteins.py  tokenizer.py  trainer.py
configs/: model1_cnn_hybrid.yaml  model2_chemberta.yaml  model3_cnn_film.yaml
model_weights/: MODELS.md
