[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "belka-binding-prediction"
version = "0.1.0"
description = "Two model families for BELKA small-molecule / protein binding prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "polars>=0.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "pyarrow>=14.0",
]

[tool.setuptools]
packages = ["belka"]
